changed starting code

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 </tr>
             </table>
         </div>
-        <p class="code enter"><span id="code">404</span><span id="suggest" class="suggest"></span>
+        <p class="code enter"><span id="code">200</span><span id="suggest" class="suggest"></span>
         </p>
-        <p id="result" class="desc enter">Not Found</p>
+        <p id="result" class="desc enter">OK</p>
     </div>
 
     <script src="js/codesMap.js"></script>
