--- a/index.html
+++ b/index.html
@@ -19,24 +19,20 @@
         <div class="explainer">
             <p>Start typing a code to get it's definition..</p>
         </div>
-        <div id="open-table" class="open-table">
+        <div id="open-table">
             <p>View Table</p>
         </div>
         <div id="table-wrapper" class="table-wrapper table-hidden">
-            <table id="codes-table" class="codes-table">
+            <table id="codes-table">
                 <tr>
                     <th class="table-header">Code</th>
                     <th class="table-header">Description</th>
-                <tr>
-                    <th>200</th>
-                    <th>OK</th>
-                </tr>
                 </tr>
             </table>
         </div>
-        <p class="code enter"><span id="code">200</span><span id="suggest" class="suggest"></span>
+        <p class="code"><span id="code">200</span><span id="suggest"></span>
         </p>
-        <p id="result" class="desc enter">OK</p>
+        <p id="result" class="desc">OK</p>
     </div>
 
     <script src="js/codesMap.js"></script>
